@@ -4,6 +4,7 @@ Next Version
 
 Future
 ======
+* in target_memory_info_array.c, need check return value of allocate_enough_to_reach everywhere
 * save state to a file, so you can apply it to a different pid.
 * search for values in files? (eg saved state)
 * macro support
